--- a/.github/workflows/02-run-tests.yaml
+++ b/.github/workflows/02-run-tests.yaml
@@ -25,3 +25,11 @@ jobs:
 
           - name: Run tests
             run: mvn test
+
+          - name: Upload Test Results
+            uses: actions/upload-artifact@v4
+            with:
+              name: playwright-test-results
+              path:
+                target/reports
+                target/surefire-reports
